[gd_scene load_steps=12 format=3 uid="uid://q64lhk0stdly"]

[ext_resource type="Script" uid="uid://nmmbgtant46v" path="res://Script/sub_ui_dash_board.gd" id="1_7shko"]
[ext_resource type="Shader" uid="uid://8sns6im73x10" path="res://Shader/rounded_progress.gdshader" id="2_acvr4"]

[sub_resource type="Gradient" id="Gradient_71i6m"]
offsets = PackedFloat32Array(0.00396825, 0.102857, 0.188571, 1)
colors = PackedColorArray(0, 0, 0, 0.568627, 0, 0, 0, 0.404835, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7shko"]
gradient = SubResource("Gradient_71i6m")
fill_from = Vector2(0.0042735, 0.0512821)
fill_to = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_71i6m"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_7shko"]
font_size = 100

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mgcee"]
shader = ExtResource("2_acvr4")
shader_parameter/progress = 0.0

[sub_resource type="CanvasTexture" id="CanvasTexture_4ragp"]

[sub_resource type="LabelSettings" id="LabelSettings_acvr4"]
font_size = 60

[sub_resource type="Gradient" id="Gradient_acvr4"]
offsets = PackedFloat32Array(0, 0.0685714, 0.362857, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.917647, 0, 0, 0.784314, 0.917647, 0, 0, 0.784314, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mgcee"]
gradient = SubResource("Gradient_acvr4")

[node name="SubUIDashBoard" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_7shko")
script = ExtResource("1_7shko")

[node name="ProgressBar_Outter" type="Line2D" parent="."]
position = Vector2(0, -10)
points = PackedVector2Array(0, 0, 1920, 0)
width = 20.0
default_color = Color(0, 0, 0, 1)

[node name="ProgressBar_Inner" type="Line2D" parent="ProgressBar_Outter"]
points = PackedVector2Array(0, 0, 1920, 0)
width = 20.0
default_color = Color(0.753984, 0.753984, 0.753984, 1)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GameStateLabels" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Label1" type="Label" parent="GameStateLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -580.0
offset_right = 546.0
offset_bottom = 181.0
grow_horizontal = 2
text = "상대를 플레이어를
기다리는중..."
label_settings = SubResource("LabelSettings_71i6m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="GameStateLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -580.0
offset_right = 546.0
offset_bottom = 181.0
grow_horizontal = 2
text = "상대를 플레이어를
기다리는중..."
label_settings = SubResource("LabelSettings_71i6m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1Info" type="Control" parent="."]
z_index = 10
anchors_preset = 0
offset_left = 40.0
offset_top = 123.0
offset_right = 40.0
offset_bottom = 123.0

[node name="Name" type="Label" parent="P1Info"]
layout_mode = 0
offset_right = 700.0
offset_bottom = 137.0
scale = Vector2(0.6, 0.6)
text = "Player1"
label_settings = SubResource("LabelSettings_7shko")
clip_text = true

[node name="TimeLeftRing" type="TextureRect" parent="P1Info"]
material = SubResource("ShaderMaterial_mgcee")
layout_mode = 1
offset_left = 254.0
offset_right = 344.0
offset_bottom = 90.0
texture = SubResource("CanvasTexture_4ragp")

[node name="TimeLeft" type="Label" parent="P1Info/TimeLeftRing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -21.0
offset_right = 97.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "60.0"
label_settings = SubResource("LabelSettings_acvr4")

[node name="AttackSign" type="TextureRect" parent="P1Info"]
modulate = Color(1, 1, 1, 0)
z_index = -1
layout_mode = 0
offset_left = -40.0
offset_top = -10.0
offset_right = 524.0
offset_bottom = 100.0
texture = SubResource("GradientTexture1D_mgcee")

[node name="P2Info" type="Control" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 123.0
offset_right = -40.0
offset_bottom = 123.0
grow_horizontal = 0

[node name="Label" type="Label" parent="P2Info"]
layout_mode = 0
offset_left = -700.0
offset_bottom = 137.0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(700, 0)
text = "Player2"
label_settings = SubResource("LabelSettings_7shko")
horizontal_alignment = 2
clip_text = true

[node name="TimeLeftRing" type="TextureRect" parent="P2Info"]
material = SubResource("ShaderMaterial_mgcee")
layout_mode = 0
offset_left = -344.0
offset_right = -254.0
offset_bottom = 90.0
texture = SubResource("CanvasTexture_4ragp")

[node name="TimeLeft" type="Label" parent="P2Info/TimeLeftRing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -21.0
offset_right = 97.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "60.0"
label_settings = SubResource("LabelSettings_acvr4")

[node name="AttackSign" type="TextureRect" parent="P2Info"]
modulate = Color(1, 1, 1, 0)
z_index = -1
offset_left = 40.0
offset_top = 100.0
offset_right = 604.0
offset_bottom = 210.0
rotation = 3.14159
texture = SubResource("GradientTexture1D_mgcee")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
